@@ -30,6 +30,7 @@ Features
  * New obsservicedispatch service to handle source service runs in a queue
    and asynchron.
  * Allow admins to lock or delete users and their home projects via new command
+ * Users can be declared sub accounts of other users. Useful for automated scripts.
 
 Incompatible changes:
 =====================
